fixing event icon alignement

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,22 +8,33 @@
   .icon-event {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-left: 0;
+    margin-right: 0;
+    gap: 0;
   }
   .icon-event .event-icon {
-    margin-left: auto !important;
-    margin-right: auto !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    display: block;
+    flex: 0 0 auto;
+    align-self: flex-start;
+  }
+  .icon-event .event-details-text-mobile {
+    flex: 1 1 auto;
+    text-align: right !important;
+    margin-left: auto;
+    margin-right: 0;
+    width: 60%;
     display: block;
   }
   .icon-event .event-time,
   .icon-event .event-name {
+    text-align: right !important;
     margin-left: auto !important;
-    margin-right: auto !important;
-    text-align: center !important;
+    margin-right: 0 !important;
     width: 100%;
     display: block;
   }
